--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link href="https://fonts.googleaspis.com/icon?family=Materials+Icons" rel="stylesheet">
     <title>PinThis Home</title>
   </head>
   <body>
